Add open source license

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hachi-player",
   "version": "0.1.0",
   "description": "",
+  "author": "kirisauce",
   "type": "module",
   "scripts": {
     "start": "vite",
